# payswitch-cs-dataml

./: .env.example  .gitignore  DEPLOYMENT.md  OVERVIEW.md  README.md  deploy.sh  pyproject.toml
DE/: .gitignore
DE/data-pipelines/: .gitignore  START_HERE.md
customer-service-agent/: function_app.py  requirements.txt
customer-service-agent/modules/: handlers.py  llm_client.py  prompts.py  retriever.py
dummy_data/: generate_datasets.py
infrastructure/: service_bus_topics.json
orchestrator/: function_app.py  requirements.txt
orchestrator/modules/: audit_store.py  batch_store.py  champion_store.py  decision_engine.py  drift_detector.py  message_schemas.py  preprocessing.py  risk_mapping.py  rules_sandbox.py
shared/: constants.py  fairness.py  utils.py
shared/schemas/: feature_schema.py  message_schemas.py  response_schema.py
tests/test_credit_risk/: test_trainer.py  test_validator.py
tests/test_customer_service/: test_handlers.py  test_retriever.py
tests/test_fraud_detection/: test_trainer.py  test_validator.py
tests/test_income_verification/: test_trainer.py  test_validator.py
tests/test_loan_amount/: test_trainer.py  test_validator.py
tests/test_orchestrator/: test_audit_store.py  test_batch_store.py  test_champion_store.py  test_decision_engine.py  test_preprocessing.py  test_risk_mapping.py  test_rules_sandbox.py
tests/test_shared/: test_constants.py  test_fairness.py  test_feature_schema.py  test_message_schemas.py
training-agents/credit-risk-agent/: function_app.py  requirements.txt
training-agents/fraud-detection-agent/: host.json  (+2 more)
(+474 files in other folders)
