[project]
name = "payswitch-cs-dataml"
version = "0.1.0"
description = "PaySwitch Credit Scoring ML Training and Inference System"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<2",
    "pymupdf>=1.27.2.2",
    "azure-functions>=1.24.0",
    "azure-servicebus>=7.14.3",
    "azure-storage-blob>=12.28.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
